test/subjects/errors/push_operator_on_strings.php
<?php

	$x = "string";
	$x[] = "asd";

?>
